<resources>
    <string name="app_name">FinalMet</string>
    <string name="new_event">New Event</string>
    <string name="set_alarms">Set Alarms</string>
    <string name="cancel_alarms">Cancel Alarms</string>

    <string name="saveButton">Save Changes</string>
    <string name="discardButton">Discard Changes</string>
    <string name="deleteButton">Delete Event</string>

    <string name="metDefault">00:00:00</string>
    <string name="descriptionDefault">Enter a description!</string>
    <string name="emptylist">Empty List</string>
</resources>
